--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "clsx": "^2.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "lucide-react": "^0.469.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.0",
+    "react-verification-input": "^4.2.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
