--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.0",
+    "react-tooltip": "^5.28.0",
     "react-verification-input": "^4.2.2",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
